--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,11 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.20</version>
     </dependency>
-
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>jstl</artifactId>
+      <version>1.2</version>
+    </dependency>
   </dependencies>
   <build>
     <finalName>mavenjfinal</finalName>
